--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.80.1",
@@ -23,10 +24,12 @@
     "react-native": "0.80.1",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-maps": "^1.24.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
     "react-native-static-safe-area-insets": "^2.2.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-toast-message": "^2.3.3"
   },
   "devDependencies": {
