--- a/ios/Habitake/Info.plist
+++ b/ios/Habitake/Info.plist
@@ -27,7 +27,7 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<false/>
+		<true/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
@@ -40,6 +40,17 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
+	</array>
+	<key>UIAppFonts</key>
+	<array>
+  		<string>Outfit-Regular.ttf</string>
+  		<string>Outfit-Bold.ttf</string>
+		<string>Outfit-ExtraBold.ttf</string>
+  		<string>Outfit-ExtraLight.ttf</string>
+		<string>Outfit-Light.ttf</string>
+  		<string>Outfit-Medium.ttf</string>
+		<string>Outfit-SemiBold.ttf</string>
+  		<string>Outfit-Thin.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
