--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
+    "axios": "^1.11.0",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-range": "^4.0.2",
@@ -25,6 +27,7 @@
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-maps": "^1.24.3",
+    "react-native-otp-textinput": "^1.1.7",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
@@ -44,6 +47,7 @@
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
     "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.8",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^19.1.0",
