--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.11.0",
+    "i": "^0.3.7",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-range": "^4.0.2",
+    "npm": "^11.5.2",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-image-picker": "^8.2.1",
     "react-native-maps": "^1.24.3",
     "react-native-otp-textinput": "^1.1.7",
     "react-native-raw-bottom-sheet": "^3.0.0",
