--- a/ios/Habitake/Info.plist
+++ b/ios/Habitake/Info.plist
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -31,26 +33,28 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>For Network Usage</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Outfit-Regular.ttf</string>
+		<string>Outfit-Bold.ttf</string>
+		<string>Outfit-ExtraBold.ttf</string>
+		<string>Outfit-ExtraLight.ttf</string>
+		<string>Outfit-Light.ttf</string>
+		<string>Outfit-Medium.ttf</string>
+		<string>Outfit-SemiBold.ttf</string>
+		<string>Outfit-Thin.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
-	</array>
-	<key>UIAppFonts</key>
-	<array>
-  		<string>Outfit-Regular.ttf</string>
-  		<string>Outfit-Bold.ttf</string>
-		<string>Outfit-ExtraBold.ttf</string>
-  		<string>Outfit-ExtraLight.ttf</string>
-		<string>Outfit-Light.ttf</string>
-  		<string>Outfit-Medium.ttf</string>
-		<string>Outfit-SemiBold.ttf</string>
-  		<string>Outfit-Thin.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
