--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.11.0",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "i": "^0.3.7",
     "i18next": "^25.4.0",
     "lodash": "^4.17.21",
