--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.80.1",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-image-crop-picker": "^0.51.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-localize": "^3.5.2",
     "react-native-maps": "^1.24.3",
