--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-image-crop-picker": "^0.51.0",
     "react-native-image-picker": "^8.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-localize": "^3.5.2",
     "react-native-maps": "^1.24.3",
     "react-native-otp-textinput": "^1.1.7",
